--- a/templates/FileIndexTemplate.html
+++ b/templates/FileIndexTemplate.html
@@ -68,7 +68,7 @@
     </div>
     <footer class="footer">
       <div class="container">
-          <p class="text-muted">Created by <a href="https://github.com/nox7atra">Grygory Dyadichenko</a>. You can find repository on <a href="google.com">Github</a></p>
+          <p class="text-muted">Created by <a href="https://github.com/nox7atra">Grygory Dyadichenko</a>. You can find repository on <a href="https://github.com/Nox7atra/SimpleBuildsServer">Github</a></p>
       </div>
     </footer>
 </body>
